# nrf54l15-crypto

./: .gitignore  Cargo.toml  README.md  build_and_flash.sh  rust-toolchain.toml
.cargo/: config.toml
app-core/: Cargo.toml  test.sh
app-core/.cargo/: config.toml
app-core/src/: lib.rs
flpr-core/: Cargo.toml
flpr-core/.cargo/: config.toml
