[package]
name = "nrf54l15-crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
# embassy-futures = { version = "0.1.2" }
# embassy-sync = { version = "0.7.2",  features = ["defmt"] }
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.5.0",  features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.8.0", features = ["defmt", "nrf54l15-app-s", "time-driver-rtc1", "gpiote", "unstable-pac"] }
# embassy-net = { version = "0.7.1",  features = ["defmt", "tcp", "dhcpv4", "medium-ethernet"] }
# embassy-usb = { version = "0.5.1",  features = ["defmt"] }
# embedded-io-async = { version = "0.6.1" }

defmt = "1.0.1"
defmt-rtt = "1.0.0"
rand = { version = "0.9.0", default-features = false }
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

[build-dependencies]
bindgen = "0.69.1"

[patch.crates-io]
psa-crypto = { git = "https://github.com/malishav/rust-psa-crypto", branch = "baremetal" }
