[package]
name = "app-core"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = { version = "0.7.1", default-features = false }
defmt = "1.0.1"
defmt-rtt = "1.0.0"
# embedded-hal = "1.0.0"
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.5.0",  features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.8.0", features = ["defmt", "nrf54l15-app-s", "time-driver-rtc1", "gpiote", "unstable-pac"] }
# rand = { version = "0.9.0", default-features = false }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
# panic-halt = "0.2.0"

nrf54l15-app-pac = { git = "https://github.com/WilliamTakeshi/nrf54l15-app-pac", version = "0.1.0", features = ["critical-section", "rt"] }
# nrf54l15-app-pac = { path = "/home/william/projects/rust/nrf54l15-app-pac", version = "0.1.0", features = ["rt", "critical-section"] }
# nrf54l15-app-pac = { git = "https://github.com/embassy-rs/nrf-pac", features = ["nrf54l15-app"] }
# nrf54l15-app-pac = { version = "0.1.0", package = "nrf-pac", features = ["nrf54l15-app"] }

# Rust crypto
sha2 = { version = "0.10", default-features = false }
aes = { version = "0.8", default-features = false }
cipher = "0.4"
p256 = { version = "0.13", default-features = false, features = ["ecdsa", "arithmetic"] }
hex = { version = "0.4", default-features = false }
